--- a/addListing.html
+++ b/addListing.html
@@ -4,8 +4,8 @@
         <title> GOVAN MARKET AND CAR BOOT </title>
         <link rel="stylesheet" href="style.css" />
         <script src="https://kit.fontawesome.com/aa6428e09b.js" crossorigin="anonymous"></script>
-        <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
-        <!-- <script defer src="addListing.js"></script> -->
+<!--         <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script> -->
+        <script defer src="addListing.js"></script>
     </head>
 
     <body>
