--- a/addListing.html
+++ b/addListing.html
@@ -4,7 +4,7 @@
         <title> GOVAN MARKET AND CAR BOOT </title>
         <link rel="stylesheet" href="style.css" />
         <script src="https://kit.fontawesome.com/aa6428e09b.js" crossorigin="anonymous"></script>
-<!--         <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script> -->
+        <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
         <script defer src="addListing.js"></script>
     </head>
 
