--- a/addListing.html
+++ b/addListing.html
@@ -5,7 +5,11 @@
         <link rel="stylesheet" href="style.css" />
         <script src="https://kit.fontawesome.com/aa6428e09b.js" crossorigin="anonymous"></script>
         <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
-        <script defer src="addListing.js"></script>
+<!--         <script defer src="addListing.js"></script> -->
+        <script>
+            var fs = require("fs");
+            console.log("Yes");
+        </script>
     </head>
 
     <body>
